# nfc_3500

./: .env  ConsumableRFIDUtilities.java  consumableRFIDUtilities.py  main.py  pyproject.toml  requirements.txt
src/: consumableRFIDUtilities.py  main.py  settings.py
src/rfid_util/: __init__.py  consumableRFIDUtilities.py  router.py
src/static/js/: main.js
src/templates/: index.html
tests/: .env  test_consumableRFIDUtilities.py
