[tool.poetry]
name = "nfc-3500"
version = "0.1.0"
description = ""
authors = ["Reznik Vladislav <reznik.vs@iapran.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pycryptodome = "^3.20.0"
pydantic-settings = "^2.2.1"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
