[tool.poetry]
name = "nfc-3500"
version = "0.1.0"
description = ""
authors = ["Reznik Vladislav <reznik.vs@iapran.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.2.1"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
jinja2 = "^3.1.3"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
